# dyna

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  SomeFile.txt  SomeFile1.txt  attention_pliots.ipynb  custom_rotary.py  debug.py  debug_model_size.py  debug_router.ipynb  eval.py  install.mauao  llama.ipynb  main.py  main_sweep.py  model.py  model_config.py  not_working.py  old_model.py  profile  profiles.py  pyproject.toml  stats.md  submit.mauao  submit.ruapehu  submit_1.mauao  submit_2.mauao  submit_3.mauao  test.py  test_rope_interface.py  tests.py  update_mosaic_libs.sh  utils.py  working.py
benchmarks/: benchmark_attention.py  benchmark_cross_entropy.py  benchmark_rope.py
cache/train/train/: index.json
configs/: MoA_base.yaml  MoA_moeut_160M.yaml  MoA_moeut_peri.yaml  MoA_moeut_peri_avg_160M.yaml  MoA_moeut_peri_resc.yaml  MoA_moeut_peri_resc_160M.yaml  MoA_moeut_peri_resc_ee_16M.yaml  MoA_moeut_peri_resc_sq_160M.yaml  MoA_moeut_peri_sq_scale_160M.yaml  README.md  TODOgeiping_160M.yaml  Transformer.yaml  geiping_160M.yaml  moeut_160M.yaml  new_abbie_160M.yaml  new_abbie_160M_no_res.yaml  new_geipping_160M.yaml  pytest_switch_head.yaml  pytest_transformer.yaml  transformer_160M.yaml  transformer_160M_abbie.yaml  transformer_160M_basey.yaml  transformer_160M_basey_loop.yaml  transformer_160M_basey_loop_dyn.yaml  transformer_160M_dyt.yaml  transformer_160M_emb_norm.yaml  transformer_160M_fsdpy.yaml  transformer_160M_loop.yaml  transformer_160M_lr_test.yaml  transformer_160M_nope.yaml  transformer_160M_sweep.yaml  transformer_160M_testing.yaml  transformer_160M_unit.yaml  transformer_16M copy.yaml  transformer_360M_loop.yaml  transformer_attention_test.yaml  transformer_lr_tune.yaml  transformer_lr_tune_large.yaml
configs/callbacks/: default_1.yaml  default_10.yaml  default_100.yaml  default_100_moe.yaml  default_1_moe.yaml
configs/data_config/: smoll.yaml  smoll_fast.yaml
configs/execute_config/callbacks/: default_100.yaml  default_100_fsdp.yaml  test_lr.yaml
configs/execute_config/data_config/: smoll.yaml  smoll_fast.yaml  smoll_tune.yaml
configs/execute_config/optimizer_config/: adamw.yaml  adamw_resets.yaml
configs/execute_config/streams/: steams_fm4p.yaml  steams_iwm.yaml  steams_pe.yaml
configs/execute_config/streams_fast/: steams_csm.yaml  steams_fw.yaml  steams_pe.yaml
configs/execute_config/streams_local/: steams_csm.yaml  steams_fm4p.yaml  steams_fw.yaml  steams_pe.yaml
configs/fsdp_config/: fsdp.yaml
configs/optimizer_config/: adamw_large.yaml
configs/scheduler_config/: wsld.yaml
configs/streams/: steams_csm.yaml  steams_fw.yaml  steams_iwm.yaml  steams_pe.yaml
configs/streams_fast/: steams_iwm.yaml
configs/streams_fastest/: steams_csm.yaml
configs/streams_local/: steams_csm.yaml  steams_fm4p.yaml  steams_fw.yaml  steams_iwm.yaml  steams_pe.yaml
configs/tests/: transformer.yaml
configs/tests/bias/: bias_moe_160M.yaml  reg_moe_160M.yaml
configs/tests/eexit/: ee_moe_160M.yaml  nee_moe_160M.yaml
configs/tests/norm_after_emb/: nae_moe_160M.yaml  nnae_moe_160M.yaml
configuration/: MoA.yaml  MoA_base.yaml  MoA_moeut.yaml  MoA_moeut_160M.yaml  MoA_moeut_peri.yaml  MoA_moeut_peri_avg_160M.yaml  MoA_moeut_peri_div_ee_160M.yaml  MoA_moeut_peri_resc.yaml  MoA_moeut_peri_resc_160M.yaml  MoA_moeut_peri_resc_ee_160M.yaml  MoA_moeut_peri_resc_sq.yaml  MoA_moeut_peri_resc_sq_160M.yaml  MoA_moeut_peri_rescavg_ee_160M.yaml  MoA_moeut_peri_sq_scale_160M.yaml  MoA_new.yaml  MoA_new_small.yaml  MoA_new_small_sig.yaml  MoA_trans.yaml  Transformer.yaml  exp_MoA_moeut_peri_resc_160M.yaml  geiping_160M.yaml  new_abbie_160M.yaml  transformer_160M.yaml  transformer_16M.yaml
configuration/callbacks/: default_1.yaml  default_10.yaml  default_100.yaml
configuration/data_config/: smoll.yaml
configuration/optimizer_config/: adamw.yaml  adamw_resets.yaml
configuration/scheduler_config/: wsld.yaml
configuration/streams/: steams_csm.yaml  steams_fm4p.yaml  steams_fw.yaml  steams_iwm.yaml  steams_pe.yaml
configuration/streams1/: stream1.yaml
configuration/streams_fast/: steams_csm.yaml  steams_fm4p.yaml  steams_fw.yaml  steams_iwm.yaml
configuration/streams_small/: steams_csm.yaml
data/: stream_text_data.py
datasets/: convert_dataset.py
dyna/: __init__.py  submit.ruapehu
dyna/attention/: attention.py  attn_test.py  ffn_test.py
dyna/benchmarks/: benchmark_attention.py  benchmark_rmsnorm.py  scatter.py
dyna/callbacks/: __init__.py  activation_monitor.py  attn_entropy_callback.py  clean_stats.py  entropy_callback.py  exit_entropy_callback.py  expert_selection_callback.py  layer_usage_monitor.py  loop_number_callback.py  residual_stream_mag_callback.py
dyna/data/: convert_dataset.py
dyna/model/: cvmm.py  llama.py  model.py  model2.py  model_config.py
dyna/utils/: utils.py
src/dyna/: __init__.py
src/dyna/config/: enums.py  (+10 more)
submit_scripts/: fsdp_submit.mauao  kill_all.mauao  submit.mauao  submit.ruapehu  submit.ruapehu1  submit_clean.ruapehu  submit_clean1.ruapehu  submit_geiping.mauao
tests/: generate_goal_graph.py  generate_standard_inputs.py  generate_standard_lm.py  generate_switch_head_lm.py  grad_test.py  graph_utils.py  test_attention.py  test_basic_attention.py  test_basic_ffn.py  test_basic_ffn_out.py  test_callbacks.py  test_config.py  test_cvmm.py  test_data.py  test_embedding.py  test_inputs.py  test_layers.py  test_model.py  test_modules.py  test_schedulers.py  test_sigma_moe.py  test_source_len_mask.py  test_switch_head.py  test_transformer.py  test_transition.py  test_utils.py  visualize_graphs.py
tests/graph_jsons/: standard_basic_attention_graph.json  standard_basic_ffn_graph.json  standard_sigma_moe_graph.json  standard_switch_head_multiple_experts_graph.json  standard_switch_head_single_expert_graph.json  standard_transformer_graph.json
tools/: casual_mask_testing.ipynb  custom_rotary.py  debug.py  debug_model_size.py  estimate_size_time.py  old_model.py  pastebin.py  profiles.py  tests.py
torch_profiler/: memory_trace12.html  memory_trace6.html
torch_profiler_new_rot/: memory_trace6.html
(+103 files in other folders)
