[project]
name = "dyna"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mosaicml[streaming, wandb]==0.32.1",
    # "flash-attn==2.8.1",  # Commented out due to GLIBC compatibility issues
    "matplotlib==3.10.3",
    "tqdm==4.67.1",
    "transformers==4.51.3",
    "beartype==0.22.2",
    "hydra-core>=1.3.2",
    "llm-foundry==0.22.0",
    "setuptools==80",
    "pyinstrument>=5.0.3",
    "pandas>=2.3.1",
    "seaborn>=0.13.2",
    "ipykernel>=6.30.0",
    "jaxtyping==0.3.3",
    "triton>=3.3.0",
    "torchinfo>=1.8.0",
    "torch>=2.7.0",
    "jupyter>=1.1.1",
    "torchtune>=0.6.1",
    "pysnooper>=1.2.3",
    "ruff>=0.7.0",
    "pre-commit>=4.3.0",
    "docformatter>=1.7.7",
    "pytest>=8.0.0",
    "pytest-cov>=7.0.0",
    "pypreprocessor>=0.1.0",
    "basedpyright>=1.31.7",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
pypreprocessor = {git = "https://github.com/Helios113/pypreprocessor.git", branch = "main"}
# mosaicml = { git = "https://github.com/Helios113/composer.git", branch = "local" }
# llm-foundry = { git = "https://github.com/Helios113/llm-foundry.git", branch = "local" }

# [tool.uv]
# no-build-isolation-package = ["flash-attn"]  # Commented out since flash-attn is disabled

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src"]
fix = true
exclude = [
"tools/",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RUF", # Ruff-specific rules
    "PYI", # flake8-pyi
]


ignore = [
    "D100", # Missing docstring in public module
    "D101", # Missing docstring in public class
    "D102", # Missing docstring in public method
    "D103", # Missing docstring in public function
    "D104", # Missing docstring in public package
    "D105", # Missing docstring in magic method
    "F722", # Forward references which in fact are jaxtyping annotations
    "N803",
    "N806",
    "E26"
]

fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"test_*.py" = ["D"]       # Disable docstring checks in tests

[tool.ruff.lint.isort]
known-first-party = ["dyna"]
force-single-line = false

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true


[tool.basedpyright]
# Add the path to your site-packages or source code directory
extraPaths = ["src", ".venv/lib/python3.12/site-packages", ".venv/lib/python3.11/site-packages", ".venv/lib/python3.10/site-packages"]
reportAny = "none"
typeCheckingMode = "basic"

exclude = [
    "tools/",
]
